--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "form-data": "^4.0.3",
     "formik": "^2.4.6",
+    "lucide-react": "^0.546.0",
     "negotiator": "^1.0.0",
     "next": "15.3.2",
     "next-intl": "^4.3.4",
